--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "mysql2": "^2.3.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
-    "local-storage": "^2.0.0"
+    "express": "^4.18.2",
+    "local-storage": "^2.0.0",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.25.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
