--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.2",
+    "express-throttle": "^2.0.0",
     "local-storage": "^2.0.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.25.1"
