--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.2",
     "express-throttle": "^2.0.0",
+    "express-validator": "^6.14.2",
     "local-storage": "^2.0.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.25.1"
